--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<!DOCTYPE html>
-  <body>
-<img src=”(images/savvy.png)”>
-  </body>
-</html>
+<html>  
+    <head>  
+        <title>Simple Web Page</title>  
+    </head>  
+    <body>  
+        <center>    
+            <img src="legionplay.xyz/images/savvy.png"/>  
+        </center>  
+    </body>  
+</html>  
