--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>  
     <head>  
-        <title>Simple Web Page</title>  
+        <title>just savvy.</title>  
     </head>  
     <body>  
         <center>    
