--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <html>  
     <head>  
-        <title>just savvy.</title>  
+        <title>savvy.</title>  
     </head>  
     <body>  
-        <center>    
-            <img src="legionplay.xyz/images/savvy.png"/>  
-        </center>  
-    </body>  
-</html>  
+        <centre>   
+            <img src="legionplay.xyz/images/savvy" height="1020px" width="720px" />//pixel value  
+  
+  
+            <br>  
+                <img src="legionplay.xyz/images/savvy" height="100%" width="100%"/>//percentage value  
+  
+  
+            </centre>  
+        </body>  
+    </html>  
