--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     </head>  
     <body>  
         <centre>   
-            <img src="legionplay.xyz/images/savvy" height="1020px" width="720px" />//pixel value  
+            <img src="legionplay.xyz/images/savvy.png" height="1020px" width="720px" />//pixel value  
   
   
             <br>  
-                <img src="legionplay.xyz/images/savvy" height="100%" width="100%"/>//percentage value  
+                <img src="legionplay.xyz/images/savvy.png" height="100%" width="100%"/>//percentage value  
   
   
             </centre>  
