--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
         <title>savvy.</title>  
     </head>  
     <body>  
-        <centre>   
-            <img src="legionplay.xyz/images/savvy.png" height="1020px" width="720px" />//pixel value  
+        <centre>    
   
   
             <br>  
-                <img src="legionplay.xyz/images/savvy.png" height="100%" width="100%"/>//percentage value  
+                <img src="legionplay.xyz/images/savvy.png" height="100%" width="100%"/>  
   
   
             </centre>  
