--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   
             <br>  
-                <img src="legionplay.xyz/images/savvy.png" height="100%" width="100%"/>  
+                <img src="savvyvagish.github.io/images/savvy.png" height="100%" width="100%"/>  
   
   
             </centre>  
